[gd_scene load_steps=3 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://wall.tscn" type="PackedScene" id=2]

[node name="world" type="Node2D"]
script = ExtResource( 1 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="fps_label" type="Label" parent="ui"]
margin_left = 14.0
margin_right = 392.0
margin_bottom = 14.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 1, 0.472656, 0.472656, 1 )
text = "3"
align = 2

[node name="borders" type="Node" parent="."]

[node name="top" parent="borders" instance=ExtResource( 2 )]
position = Vector2( 960, 0 )

[node name="bottom" parent="borders" instance=ExtResource( 2 )]
position = Vector2( 958.763, 1085.09 )

[node name="left" parent="borders" instance=ExtResource( 2 )]
position = Vector2( 0.408752, 521.638 )
rotation = 1.5708

[node name="right" parent="borders" instance=ExtResource( 2 )]
position = Vector2( 1922.38, 518.849 )
rotation = 1.5708

[node name="timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
